# Frankie

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE_PLACEHOLDER.md  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
ai/: README.md
backups/: README.md  backup-recursos.sh.example  backup-servicios.sh.example
checklists/: README.md  mantenimiento_servidor.md  restauracion.md  validacion_frankie_cli.md  validacion_scripts_srv-recursos.md  validacion_scripts_srv-servicios.md  validacion_srv-recursos.md  validacion_srv-servicios.md
cli/: README.md  pyproject.toml
cli/frankie/: __init__.py  app.py
cli/frankie/commands/: __init__.py  audit.py  help.py  inventory.py  status.py  version.py
cli/frankie/core/: __init__.py  context.py  evidence.py  output.py  payload.py
cli/tests/: test_cli.py
docker/: README.md
docs/: DOC-SRV-001_Servidor_Aula_n8n.md  README.md  arquitectura.md  automatizacion.md  incidencias.md  mantenimiento_servidor.md  procedimientos.md  seguridad.md  validacion_scripts.md
env/: README.md  n8n.env.example  postgres.env.example  samba.env.example  smtp.env.example
frankie/: __init__.py  __main__.py  app.py
governance/: ARCHITECTURE.md  CODING_STANDARDS.md  PROJECT_RULES.md  VERSIONING.md  VISION.md
knowledge/: BACKUPS.md  DECISIONES.md  DOCKER.md  INCIDENCIAS.md  RED.md  SAMBA.md  SERVICIOS.md  SERVIDORES.md
monitor/: README.md
samba/: README.md  estructura-recursos.example.txt  smb.conf.example
scripts/: README.md
tests/: test_audit.py  test_cli_roadmap.py  test_doctor.py  test_help.py  (+10 more)
(+213 files in other folders)
